<?xml version="1.0" encoding="utf-8"?>
<!--
  Author : Sujanth Babu Guntupalli
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.princ.homework2.MainActivity">

    <ImageButton
        android:id="@+id/createTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="22dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTaskButton"
        android:layout_centerHorizontal="true"
        android:text="@string/ViewTitle" />

    <TextView
        android:id="@+id/tvTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvTaskTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="43dp"
        android:text="@string/ViewDate" />

    <TextView
        android:id="@+id/tvTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTaskDate"
        android:layout_alignBottom="@+id/tvTaskDate"
        android:layout_alignEnd="@+id/createTaskButton"
        android:layout_alignRight="@+id/createTaskButton"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ViewTime" />

    <TextView
        android:id="@+id/tvTaskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tvTaskDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/ViewPriority" />

    <TextView
        android:id="@+id/tvTaskNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTaskPriority"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvTaskPriority"
        android:layout_marginBottom="108dp"
        android:layout_centerVertical="true"
        android:text="@string/InitialTask" />

    <ImageButton
        android:id="@+id/firstTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/previousTaskButton"
        android:layout_toStartOf="@+id/previousTaskButton"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/previousTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/firstTaskButton"
        android:layout_toLeftOf="@+id/editTaskButton"
        android:layout_toStartOf="@+id/editTaskButton"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/editTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/previousTaskButton"
        android:layout_toLeftOf="@+id/deleteCurrTaskButton"
        android:layout_toStartOf="@+id/deleteCurrTaskButton"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/deleteCurrTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTaskButton"
        android:layout_toLeftOf="@+id/nextTaskButton"
        android:layout_toStartOf="@+id/nextTaskButton"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/nextTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/deleteCurrTaskButton"
        android:layout_toLeftOf="@+id/lastTaskButton"
        android:layout_toStartOf="@+id/lastTaskButton"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/lastTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/nextTaskButton"
        app:srcCompat="@android:drawable/ic_media_ff" />
</RelativeLayout>
